--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+            background: linear-gradient(135deg, #000000 0%, #3a0066 100%); /* Fundo preto e roxo escuro */
             height: 100vh;
             display: flex;
             justify-content: center;
